--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,9 @@ p {
     padding-bottom: 2em;
 }
 
+main {
+    overflow: auto;
+}
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
@@ -121,7 +124,7 @@ footer a:hover {
 
 @media all and (min-width: 750px) {
     #story {
-        width: 40%;
+        width: 60%;
         float: left;
         margin: 0 0 0.5em 2em;
     }
@@ -134,24 +137,8 @@ footer a:hover {
 
 @media all and (min-width: 750px) {
     .images {
-        width: 51%;
+        width: 31%;
         float: right;
         margin: 0 2em 0.5em 0;
-    }
-}
-
-.button {
-    width: calc(100% - 4em);
-    margin: 0.5em 2em 0 2em;
-}
-
-.button:hover {
-    opacity: 0.7;
-}
-
-@media all and (min-width: 750px) {
-    .button {
-        width: 40%;
-        margin: 0 0 0.5em 2em;
     }
 }
