--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ nav li {
 
 #story {
     background-color: #ffffff;
-    margin: 0.5em 2em 0 2em;
+    margin: 0.5em 0em 0 0em;
     padding: 1em;
 }
 
@@ -102,7 +102,7 @@ nav li {
 aside {
     padding: 1em;
     background-color: #158c03;
-    margin: 0.5em 2em 0 2em;
+    margin: 0.5em 0em 0.5em 0em;
 }
 
 aside h1,
@@ -137,19 +137,23 @@ footer a:hover {
     opacity: 0.7;
 }
 
+.social-icon {
+    width: 40px;
+}
+
 @media all and (min-width: 750px) {
     #story {
         width: 60%;
         float: left;
-        margin: 0 0 0.5em 2em;
+        margin: 0.5em 0.5em 0.5em 2em;
     }
 }
 
 
 @media all and (min-width: 750px) {
     aside {
-        width: 31%;
+        width: 30%;
         float: right;
-        margin: 0 2em 0.5em 0;
+        margin: 0.5em 2em 0.5em 0;
     }
 }
