--- a/css/main.css
+++ b/css/main.css
@@ -113,14 +113,25 @@ aside h2 {
     color: #010440;
 }
 
-#menu h1,
-#menu h2,
 .zero-bottom {
     margin-top: 0;
 }
 
-.menu-item h3 {
-    padding-top: 10px;
+#menu h2,
+.menu-item h3,
+.menu-item p {
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+}
+
+#menu h2 {
+    margin-top: 20px;
+}
+
+#menu h3 {
+    margin-top: 10px;
 }
 
 .images {
