--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,8 @@ header {
 }
 
 #info,
-#menu {
+#menu,
+#photo-section {
     background-color: #ffffff;
     margin: 0.5em 0 0 0;
     padding: 1em;
@@ -95,10 +96,6 @@ header {
 #info a:hover,
 #menu a:hover {
     text-decoration: underline;
-}
-
-#story-image {
-    width: 100%;
 }
 
 aside {
@@ -134,7 +131,8 @@ aside h2 {
     margin-top: 10px;
 }
 
-.images {
+.images,
+#story-image {
     width: 100%;
 }
 
@@ -166,7 +164,8 @@ footer a:hover {
 
 @media all and (min-width: 799px) {
     #info,
-    #menu {
+    #menu,
+    #photo-section {
         width: 60%;
         float: left;
         margin: 0.5em 0.5em 0.5em 2em;
